[gd_scene load_steps=8 format=3 uid="uid://ko7fboiix8tb"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_417gq"]
[ext_resource type="PackedScene" uid="uid://cl66fybrofm8o" path="res://scenes/border.tscn" id="1_re7to"]
[ext_resource type="Texture2D" uid="uid://djnfnivycvylm" path="res://assets/Mac.png" id="1_skl6u"]
[ext_resource type="PackedScene" uid="uid://xm2eevqwdhho" path="res://scenes/duck_body_2d.tscn" id="2_bphel"]
[ext_resource type="PackedScene" uid="uid://dg3cwxhig8mb4" path="res://scenes/fris_path.tscn" id="4_7qvov"]
[ext_resource type="PackedScene" uid="uid://bbjeggpmrj6j5" path="res://scenes/characters.tscn" id="7_wojsk"]

[sub_resource type="Curve2D" id="Curve2D_m0tbu"]
bake_interval = 20.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_417gq")

[node name="mac" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(592.5, 197)
scale = Vector2(1.91113, 1.07227)
texture = ExtResource("1_skl6u")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(589, 189)

[node name="border" parent="." instance=ExtResource("1_re7to")]
position = Vector2(204, -24)

[node name="DuckBody2D" parent="." groups=["characters", "maincharacter"] instance=ExtResource("2_bphel")]
position = Vector2(287, 298)

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(0, -4)
curve = SubResource("Curve2D_m0tbu")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(597, 405)
rotates = false
cubic_interp = false
loop = false

[node name="FrisPath" parent="Path2D/PathFollow2D" instance=ExtResource("4_7qvov")]
position = Vector2(86, 69)
scale = Vector2(2.83145, 3.55438)
collision_layer = 5
collision_mask = 5

[node name="timelabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="savepoint" type="Timer" parent="."]
one_shot = true

[node name="mathsaver" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="char" parent="." groups=["characters"] instance=ExtResource("7_wojsk")]
position = Vector2(104, 456)
scale = Vector2(4, 5.114)
collision_layer = 4
collision_mask = 5

[node name="chartimeout" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="border" to="." method="_on_border_body_entered"]
[connection signal="body_entered" from="Path2D/PathFollow2D/FrisPath" to="." method="_on_fris_path_body_entered"]
[connection signal="body_exited" from="Path2D/PathFollow2D/FrisPath" to="." method="_on_fris_path_body_exited"]
[connection signal="timeout" from="savepoint" to="." method="_on_savepoint_timeout"]
[connection signal="timeout" from="mathsaver" to="." method="_on_mathsaver_timeout"]
[connection signal="timeout" from="chartimeout" to="." method="_on_chartimeout_timeout"]
